--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ task clean(type: Delete) {
 
 project.ext {
     androidArchVersion = "1.1.0"
+    roomVersion = "1.0.0"
     daggerVersion = "2.4"
     rxJavaVersion = "2.1.0"
     rxAndroidVersion = "2.0.1"
